# sonata

./: .env  .env.template  .gitignore  .luarc.json  .nvim.lua  AGENTS.md  CLAUDE.md  README.md  ReadME.md  beepbox.js  config.js  config.json  deno.json  echo  index.js  jummbox1_2.js  package-lock.json  package.json  prompt  pyproject.toml  pyrightconfig.json  requirements.txt  sonata.config.json  testdb.sqlite  trm.favs
.agents/rules/: project-manager-guide.md
.agents/workflows/: beautifying-review.md  delegate.md  new-ticket.md  pickup.md  plan-ticket.md  project-status.md  refine-ticket.md  rereview.md  respond-dev-plan.md  review.md  scan.md
.codex/environments/: environment.toml
.zed/: settings.json
BeepboxAPI/: main.js
BeepboxSynths/: jummbox_2-0.js  jummbox_4-0.js  modbox_2-3.js  sandbox_3-0.js  synthbox.js
Classes/: Playlist.js  Profile.js  Queue.js
Commands/: aliases.js  help.js  queueCommands.js  songCommands.js  test.js
numa 2.0/: main.js  package.json  test.js
src/: __init__.py  claude.ts  index.py  index.ts  ref.ts  sonata_config.py
tests/: test_beacon_policy.py  test_channel_policies.py  test_cursor_access.py  test_cursor_adapter_security.py  test_cursor_client.py  test_cursor_close_path.py  test_cursor_commands.py  test_cursor_concurrency_lifecycle.py  test_cursor_context.py  test_cursor_discord_cdn.py  test_cursor_effect_order.py  test_cursor_inactivity_model.py  test_cursor_renderer_tracker.py  test_cursor_sessions.py  test_cursor_thread_sessions.py  test_klipy_gif.py  test_policy_api.py  test_term_commands.py  test_term_console.py
(+154 files in other folders)
